tests/sema/negative/undefined_variable.nv
fn main() : void {
    let x : int = y;
    return;
}
